[metadata]
name = py-diffie-hellman
version = 1.0.1
author = Kuba Szczodrzyński
author_email = kuba@szczodrzynski.pl
description = Python implementation of the Diffie-Hellman key exchange protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TOPDapp/py-diffie-hellman
project_urls =
    Bug Tracker = https://github.com/TOPDapp/py-diffie-hellman/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
